objects/Ministry_Request__c.object
<CustomObject>
    <fields>
        <fullName>Call_Duration__c</fullName>
        <description>Duration of Call in Minutes</description>
        <inlineHelpText>Duration of Call in Minutes e.g 1 hr call would be 60 minutes.</inlineHelpText>
        <label>Call Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Purpose__c</fullName>
        <label>Call Purpose</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prayer</fullName>
                </value>
                <value>
                    <fullName>Counseling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_Need__c</fullName>
        <label>Category/Need</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Finances</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Self</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                    <default>true</default>
                    <label>Employee</label>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Request_Origin__c</fullName>
        <label>Request Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Need__c</fullName>
        <label>Secondary Need</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category_Need__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anxiety</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>Children’s health</fullName>
                </value>
                <value>
                    <fullName>Debt</fullName>
                </value>
                <value>
                    <fullName>Depression</fullName>
                </value>
                <value>
                    <fullName>Extended family</fullName>
                </value>
                <value>
                    <fullName>For parent’s health</fullName>
                </value>
                <value>
                    <fullName>Gambling</fullName>
                </value>
                <value>
                    <fullName>In-laws</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Money Management</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overspending</fullName>
                </value>
                <value>
                    <fullName>Parents</fullName>
                </value>
                <value>
                    <fullName>Recent Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Self-harm</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Spouse’s health</fullName>
                </value>
                <value>
                    <fullName>Stress</fullName>
                </value>
                <value>
                    <fullName>Suicide</fullName>
                </value>
                <value>
                    <fullName>Under the weather</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tertiary_Need__c</fullName>
        <label>Tertiary Need</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Secondary_Need__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abuse/Self-harm</fullName>
                </value>
                <value>
                    <fullName>Addition</fullName>
                </value>
                <value>
                    <fullName>Allergies</fullName>
                </value>
                <value>
                    <fullName>Alzheimer Disease</fullName>
                </value>
                <value>
                    <fullName>Anger Issues</fullName>
                </value>
                <value>
                    <fullName>Anxiety</fullName>
                </value>
                <value>
                    <fullName>Autism</fullName>
                </value>
                <value>
                    <fullName>Bad habits</fullName>
                </value>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>Bullying</fullName>
                </value>
                <value>
                    <fullName>Car loans</fullName>
                </value>
                <value>
                    <fullName>Cell phone bills</fullName>
                </value>
                <value>
                    <fullName>Changes and Stressful Events</fullName>
                </value>
                <value>
                    <fullName>Children/Special Needs</fullName>
                </value>
                <value>
                    <fullName>Cold/Flu</fullName>
                </value>
                <value>
                    <fullName>Controlling relatives/parents</fullName>
                </value>
                <value>
                    <fullName>Credit card debt</fullName>
                </value>
                <value>
                    <fullName>Death in the Family</fullName>
                </value>
                <value>
                    <fullName>Decision to place in nursing home</fullName>
                </value>
                <value>
                    <fullName>Decreased income</fullName>
                </value>
                <value>
                    <fullName>Dementia</fullName>
                </value>
                <value>
                    <fullName>Depression</fullName>
                </value>
                <value>
                    <fullName>Discord/Disagreements</fullName>
                </value>
                <value>
                    <fullName>Divorce or Separation</fullName>
                </value>
                <value>
                    <fullName>Due to Age (Hormonal unbalance)</fullName>
                </value>
                <value>
                    <fullName>Due to coping skills</fullName>
                </value>
                <value>
                    <fullName>Due to current Prescription/s</fullName>
                </value>
                <value>
                    <fullName>Due to Difficulty managing emotions</fullName>
                </value>
                <value>
                    <fullName>Due to Finances</fullName>
                </value>
                <value>
                    <fullName>Due to health condition/s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ministry Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Call_Purpose__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Counseling_Requests</fullName>
        <columns>NAME</columns>
        <columns>Category_Need__c</columns>
        <columns>Secondary_Need__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Call_Purpose__c</field>
            <operation>equals</operation>
            <value>Counseling</value>
        </filters>
        <label>Counseling Requests</label>
    </listViews>
    <listViews>
        <fullName>Prayer_Requests</fullName>
        <columns>NAME</columns>
        <columns>Category_Need__c</columns>
        <columns>Secondary_Need__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Call_Purpose__c</field>
            <operation>equals</operation>
            <value>Prayer</value>
        </filters>
        <label>Prayer Requests</label>
    </listViews>
    <nameField>
        <displayFormat>MR-{00000000}</displayFormat>
        <label>Ministry Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ministry Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>